# Goo

./: .blender_path  .gitignore  LICENSE  Makefile  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
_modules/: index.html
_modules/goo/: boundary.html  cell.html  division.html  force.html  gene.html  growth.html  handler.html  molecule.html  reloader.html  simulator.html  utils.html
_sources/developer_guide/: developers.rst.txt
_sources/getting_started/: installation.rst.txt
acknowledgment/: citation.html  contributors.html
developer_guide/: developers.html  learning_resources.html
docs/: blender_sphinx.py
docs/source/: conf.py  index.rst
docs/source/developer_guide/: developers.rst
docs/source/examples/: 3_random_cell_mixing.py
docs/source/getting_started/: example_scripts.rst  export_data.rst
getting_started/: example_scripts.html  hardware.html  installation.html
scratch/: make_movie_from_tifs.py  requirements.txt  visualize_conversion.py
scripts/modules/goo/: cell.py  handler.py  simulator.py
simulations/: 10_extracellular_sensing.py  1_homotypic_adhesion_doublets.py  2_randomly_moving_doublets.py  3_volume_dividing_cells.py  4_time_dividing_cells.py  5_random_cell_mixing.py  6_export_data.py  7_export_slices.py  8_blinking_cells.py  9_genes_control_motion.py
src/goo/: __init__.py  boundary.py  cell.py  division.py  force.py  gene.py  growth.py  handler.py  molecule.py  reloader.py  simulator.py  utils.py
tests/: test_adhesion_handler.py  test_cell.py  test_cell_shape.py  test_diffusion_system.py  test_growth_handler.py  test_random_motion_handler.py  test_remesh_handler.py
user_guide/: api.html  goo.boundary.html  goo.cell.html  goo.division.html  goo.force.html  goo.gene.html  goo.growth.html  goo.handler.html  goo.molecule.html  goo.reloader.html  goo.simulator.html  goo.utils.html
